--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><link rel="stylesheet" href="relative path to CSS file">
+  <head><link rel="stylesheet" href="">
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
